Overrode some bootstrap CSS to fix the height of the cards if the image is too tall.

--- a/code/server/public/css/style.css
+++ b/code/server/public/css/style.css
@@ -14,3 +14,8 @@
 .pad-top {
 	padding-top: 60px;
 }
+
+.thumbnail img {
+	min-height:300px;
+	height:300px;
+}
